# ai-hr-hiring-agent-lab

./: .funcignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  function_app.py  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.claude/: AGENTS.md
config/: azure.env.sample  lab-config.toml  role-agent-mapping.sample.json
docs/: hr_hiring_agent_mvp_workflow_azure_build_overlay_v0_1.md
fixtures/: manifest.json
infra/: README.md  env.sample  parameters.sample.json
openapi/: evaluations-api.json
scripts/: export_copilot_openapi.py  export_openapi.py  run_council_local.py  smoke_foundry_config.py  smoke_storage_config.py  smoke_workflow_storage_config.py  vendor_fixtures.py
tests/: conftest.py  fake_blob.py  sentinels.py  test_azure_functions_host.py  test_business_fixtures.py  test_copilot_studio_openapi.py  test_dt001_happy_path.py  test_dt002_determinism.py  test_dt003_rigor_resolver.py  test_dt004_escalation_matrix.py  test_dt005_triggers.py  test_dt006_gates.py  test_dt007_status_vocabulary.py  test_dt008_idempotency.py  test_dt009_authorization.py  test_dt010_mandatory_flags.py  test_dt011_never_log.py  test_dt012_injection.py  test_dt013_mock_parity.py  test_dt014_openapi.py  test_dt015_missing_evidence.py  test_dt016_sequencing.py  test_dt017_role_discipline.py  test_dt018_cli_facade_only.py  test_e10_source_documents_api.py  test_e10_source_documents_service.py  test_e11_role_intake_rubric_api.py  test_e11_role_intake_rubric_service.py  test_e12_applicant_intake_api.py  test_e12_applicant_intake_service.py  test_e7_blob_paths.py  (+16 more)
(+320 files in other folders)
